[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pdw_simulator"
version = "0.1.0"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
description = "A Pulse Descriptor Word (PDW) Simulator"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pint",
    "streamlit",
    "scipy"
]